# pybind

./: .pre-commit-config.yaml  README.md  environment.yml  questions.md  tmp.py
benchmarks/superfastcode/: module.cpp
benchmarks/superfastcode2/: module.cpp
cextension_basic/: .clang-format  .clang-tidy  cppmult  cppmult.cpp  cppmult.h  cython_run.py  pyproject.toml  run.sh  setup.py
pybind11_basic/cpp/: CMakeLists.txt  run.sh
pybind11_basic/cpp/include/: add_floats.h  mult_floats.h
pybind11_basic/cpp/src/: add_floats.cpp  mult_floats.cpp
pybind11_basic/cpp/tests/: add_floats_tests.cpp  mult_floats_tests.cpp
pybind11_basic/python/: bindings.cpp  run.sh  setup.py
pybind11_basic/tests/: test_add_mult.py
pybind11_simple/: add_floats.cpp  add_floats_binding.cpp  add_floats_test.py  setup_project.sh
pyctypes/: README.md  setup.py
pyctypes/cpp/: CMakeLists.txt  CMakePresets.json  cmult.cpp  cmult.h  cmult_test.cpp
pyctypes/python/: cmult.i  cmult.py  cmult_wrap.cxx
pyctypes/tests/: load_share_lib_ctypes.py
pyctypes_simple/: add_floats.cpp  add_floats.dylib  add_floats.py  setup.py  setup_project.sh
pyctypes_swig/: add_floats.h  add_floats.i  add_floats.py  add_floats_test.py  setup_project.sh
