############## build-system ##############
[build-system]
requires = ["setuptools >=50", "wheel"]
build-backend = "setuptools.build_meta"

############## project ##############
[project]
name = "cextension_basic"
version = "0.0.1"
description = "A minimal example package (with Python C Extension)"
authors = [{ name = "Trung", email = "trung@email.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["sample", "setuptools", "development"]
dependencies = []

# pip install sampleproject[dev]
[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Source" = "https://github.com/pypa/sampleproject/"
